<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:paddingBottom="10dp"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView

            android:text="@string/Select_location"
            android:textColor="@color/blue_grey_700"

            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.rey.material.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"

            android:id="@+id/buttonShare"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/SHARE"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textColor="@color/teal_700"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/wizard_text_content_margin"
                android:orientation="vertical">
                <TextView
                    android:text="@string/Location"
                    android:textSize="@dimen/wizard_text_subtitle"
                    android:textColor="@color/blue_grey_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/textViewSelectedLocation"
                    android:minLines="3"
                    android:maxLines="3"
                    android:textSize="@dimen/wizard_text_subtitle"
                    android:textColor="@color/blue_grey_500"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.rey.material.widget.Button
                android:layout_marginTop="@dimen/wizard_content_margin_inline"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/buttonLocation"
                android:background="@null"
                android:layout_gravity="right"
                android:text="@string/SELECT"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/wizard_text_subtitle"
                android:textColor="@color/blue_grey_700"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/wizard_text_content_margin"
                android:orientation="vertical">
                <TextView
                    android:text="@string/Phone"
                    android:textSize="@dimen/wizard_text_subtitle"
                    android:textColor="@color/blue_grey_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/textViewSelectedPhone"
                    android:minLines="3"
                    android:maxLines="3"
                    android:textSize="@dimen/wizard_text_subtitle"
                    android:textColor="@color/blue_grey_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.rey.material.widget.Button
                android:layout_marginTop="@dimen/wizard_content_margin_inline"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/buttonPhone"
                android:background="@null"
                android:layout_gravity="right"
                android:text="@string/SELECT"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/wizard_text_subtitle"
                android:textColor="@color/blue_grey_700"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>